--- a/FunctionApp1.Impl/FunctionApp1.Impl.csproj
+++ b/FunctionApp1.Impl/FunctionApp1.Impl.csproj
@@ -10,13 +10,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
+    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="3.0.3" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     <PackageReference Include="Willezone.Azure.WebJobs.Extensions.DependencyInjection" Version="1.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\serilog-sinks-applicationinsights\src\Serilog.Sinks.ApplicationInsights\Serilog.Sinks.ApplicationInsights.csproj" />
   </ItemGroup>
 
 </Project>
